<?xml version="1.0"?>
<package format="2">
  <name>husky_planner</name>
  <version>0.1.0</version>
  <description>The husky_planner package</description>

  <license>Amazon Software License</license>
  <maintainer email="adsnghw@amazon.com">Adi Singh</maintainer>
  <url type="website">https://aws.amazon.com/robomaker/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>husky_gazebo</build_depend>
  <build_depend>husky_navigation</build_depend>
  <build_depend>husky_viz</build_depend>
  <build_export_depend>global_planner</build_export_depend>
  <build_export_depend>husky_gazebo</build_export_depend>
  <build_export_depend>husky_navigation</build_export_depend>
  <build_export_depend>husky_viz</build_export_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
  <exec_depend>husky_viz</exec_depend>

  <export />
</package>
